<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">


        # Title image
    <ImageView
        android:id="@+id/image_title_cast_list"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/app_mockup___main_screen_image_title"></ImageView>


        # Header text for the cast list screen
    <TextView
        android:id="@+id/text_cast_and_crew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/special_elite"
        android:text="@string/text_cast_and_crew"
        android:textAllCaps="true"
        android:textColor="@color/light_grey"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_title_cast_list" />


        # Scroll view containing each button that will navigate to the corresponding member page
    # TODO: Add button functionality to navigate to the corresponding member page and
    #       pass a member identifier corresponding to the button that was pressed
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cast_and_crew">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    # TODO: Create a for loop to assign button text and id based on Actors.json file
            <Button
                android:id="@+id/button_alicia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_alicia"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_angel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_angel"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_wade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_wade"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_na"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_na"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_kalonji"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_kalonji"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_brady"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_brady"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_matthew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_matthew"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_aaron"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_aaron"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_chrystyan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_chrystyan"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_ethan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_ethan"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_amiah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/button_amiah"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>