<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".MainActivity">


        # Title image
    <ImageView
        android:id="@+id/image_title_main"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/app_mockup___main_screen_image_title" />


        # Typewriter image
    <ImageView
        android:id="@+id/image_typewriter_main"
        android:layout_width="0dp"
        android:layout_height="209dp"
        android:layout_marginEnd="-2dp"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:cropToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_film_button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/app_mockup___main_screen_image_typewriter" />


        # Video view for watching video preview
    # TODO: Add functionality to play a preview video of the movie
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:scaleY=".25"
        app:layout_constraintBottom_toTopOf="@id/cast_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_title_main" />


        # Button to navigate to the Cast List screen
    # TODO: Add button functionality to navigate to Cast List screen
    <Button
        android:id="@+id/cast_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_cast_and_crew"
        app:layout_constraintBottom_toTopOf="@id/image_typewriter_main"
        app:layout_constraintEnd_toStartOf="@id/where_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoView" />


        # Button to navigate to the About the Film screen
    # TODO: Add button functionality to navigate to About screen

    <Button
        android:id="@+id/about_film_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_about_the_film"
        app:layout_constraintBottom_toTopOf="@+id/image_typewriter_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/where_button"
        app:layout_constraintTop_toBottomOf="@id/videoView" />


        # Button to navigate to the Where to Watch screen
    # TODO: Add button functionality to navigate to Where to Watch screen

    <Button
        android:id="@+id/where_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_where_to_watch"
        app:layout_constraintBottom_toTopOf="@id/image_typewriter_main"
        app:layout_constraintEnd_toStartOf="@+id/about_film_button"
        app:layout_constraintStart_toEndOf="@id/cast_button"
        app:layout_constraintTop_toBottomOf="@id/videoView" />

</androidx.constraintlayout.widget.ConstraintLayout>